learning_programs/mac-address-scanner/build/log/idf_py_stderr_output_33048
Command: make -j 10 all
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:19:7: error: expected ';' before 'struct'
   19 | typdef struct {
      |       ^~~~~~~
      |       ;
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c: In function 'app_main':
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:25:5: error: statement with no effect [-Werror=unused-value]
   25 |     Mac mac;
      |     ^~~
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:25:8: error: expected ';' before 'mac'
   25 |     Mac mac;
      |        ^~~~
      |        ;
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:26:19: error: 'mac' undeclared (first use in this function); did you mean 'Mac'?
   26 |     esp_read_mac(&mac.address, ESP_MAC_BASE);
      |                   ^~~
      |                   Mac
/home/danny/esp-idf/projects/learning_programs/mac-address-scanner/main/mac-address-scanner.c:26:19: note: each undeclared identifier is reported only once for each function it appears in
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/mac-address-scanner.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5719: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
